--- a/css/index.css
+++ b/css/index.css
@@ -175,6 +175,10 @@ a {
   font-family: "Merriweather";
 }
 
+.high-quality {
+  font-size: 20px;
+}
+
 .clients-list img {
   width: 70%;
   margin: auto;
@@ -216,3 +220,25 @@ a {
   text-transform: lowercase;
 }
 
+@media (max-width: 767px){
+  .container {
+    padding: 60px 20px !important;
+    min-width: 280px;
+  }
+
+  .fashion-district {
+    width:305px;
+  }
+
+  .dkny {
+    padding-top: 50px;
+  }
+
+  .joan-vass {
+    padding-top: 50px;
+  }
+
+  .haute-hippie {
+    padding-top: 50px;
+  }
+}
